--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
   font-family: "Fira Sans", sans-serif;
 }
 
+body {
+  background: rgb(255, 255, 255);
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 50%, rgba(101,101,101,1) 100%);
+  );
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 /* Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
