--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ p {
 }
 
 img {
-  width: 500px;
+  width: 250px;
   margin: 20px;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.52);
   border-radius: 10px;
@@ -144,6 +144,13 @@ img {
   margin: 20px;
   height: auto;
 }
+
+.img-wrap-four {
+  position: relative;
+  width: 500px;
+  margin: 20px;
+  height: auto;
+}
 #image-text-one {
   display: flex;
   justify-content: center;
@@ -159,7 +166,12 @@ img {
   justify-content: center;
 }
 
-.img-wrap:hover {
+#image-text-four {
+  display: flex;
+  justify-content: center;
+}
+
+img:hover {
   opacity: 0.7;
 }
 
@@ -210,4 +222,13 @@ hr {
 
 #link-list {
   padding-right: 40px;
+}
+
+#music-embed {
+display: block;
+justify-content: center;
+align-items: center;
+width: 60%;
+margin-left: auto;
+margin-right: auto;
 }
