--- a/style.css
+++ b/style.css
@@ -3,21 +3,24 @@
 }
 
 body {
-  background: rgb(75, 75, 75);
+  background: rgb(69,69,69);
+background: linear-gradient(180deg, rgb(97, 97, 97) 0%, rgb(34, 34, 34) 100%);
   height: 100%;
   margin: 0;
+  margin-bottom: 20px;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-/* Style the header with a grey background and some padding */
+
 .header {
   overflow: hidden;
   background-color: #2e2e2e;
   padding: 20px 10px;
+
 }
 
-/* Style the header links */
+
 .header a {
   float: left;
   color: rgb(255, 255, 255);
@@ -26,34 +29,34 @@ body {
   text-decoration: none;
   font-size: 18px;
   line-height: 25px;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+
 .header a.logo {
   font-size: 25px;
   font-weight: bold;
   color: white;
 }
 
-/* Change the background color on mouse-over */
+
 .header a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Style the active/current link*/
+
 .header a.active {
   background-color: rgb(0, 146, 114);
   color: white;
 }
 
-/* Float the link section to the right */
+
 .header-right {
   float: right;
 }
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+
 @media screen and (max-width: 768px) {
   .header a {
     float: none;
@@ -77,37 +80,29 @@ h1 {
   justify-content: center;
   margin: 30px;
   color: white;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
+  
 }
 
 p {
   padding: 20px;
   color: white;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
+  
 }
 
 #bio-text {
   align-items: center;
   background: rgb(26, 26, 26);
+  border-style: solid ;
+  border-color: rgb(0, 146, 114);
   border-radius: 10px;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.52);
   word-break: break-word;
   width: min(70%, 600px);
   margin-left: auto;
   margin-right: auto;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
 }
 
 #thumbnails {
@@ -136,11 +131,14 @@ img {
   border-radius: 10px;
   height: auto;
   transition: 0.5s ease;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
+  border-style: solid ;
+  border-color: rgb(0, 146, 114);
+  
+}
+
+img:hover {
+  opacity: 0.6;
 }
 
 @keyframes fadeIn {
@@ -198,48 +196,31 @@ img {
   display: flex;
   justify-content: center;
   color: white;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
+  
 }
 
 #image-text-two {
   display: flex;
   justify-content: center;
   color: white;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
+
 }
 
 #image-text-three {
   display: flex;
   justify-content: center;
   color: white;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
+  
 }
 
 #image-text-four {
   display: flex;
   justify-content: center;
   color: white;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
-}
-
-img:hover {
-  opacity: 0.7;
+  animation: fadeIn 1s;
 }
 
 #project-links {
@@ -263,38 +244,36 @@ li {
 hr {
   width: 50%;
   margin-bottom: 50px;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
 }
 
 #hr-about {
   width: 40%;
   margin-bottom: 50px;
+  
 }
 #hr-links {
   width: 40%;
   margin-bottom: 50px;
+  color: rgb(0, 146, 114);
 }
 
 #link-block {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   background: rgb(26, 26, 26);
+  border-style: solid ;
+  border-color: rgb(0, 146, 114);
   border-radius: 10px;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.52);
   word-break: break-word;
   width: min(70%, 600px);
   margin-left: auto;
   margin-right: auto;
-  animation: fadeIn 2s;
-  -webkit-animation: fadeIn 2s;
-  -moz-animation: fadeIn 2s;
-  -o-animation: fadeIn 2s;
-  -ms-animation: fadeIn 2s;
+  animation: fadeIn 1s;
+  
 }
 
 #link-list {
@@ -313,9 +292,6 @@ align-items: center;
 width: 60%;
 margin-left: auto;
 margin-right: auto;
-animation: fadeIn 2s;
--webkit-animation: fadeIn 2s;
--moz-animation: fadeIn 2s;
--o-animation: fadeIn 2s;
--ms-animation: fadeIn 2s;
+animation: fadeIn 1s;
+box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.52);
 }
