--- a/style.css
+++ b/style.css
@@ -4,24 +4,40 @@
 
 body {
   background: rgb(69,69,69);
-background: linear-gradient(180deg, rgb(97, 97, 97) 0%, rgb(34, 34, 34) 100%);
+  background: linear-gradient(180deg, rgb(97, 97, 97) 0%, rgb(34, 34, 34) 100%);
   height: 100%;
   margin: 0;
   margin-bottom: 20px;
+  margin-top: 100px;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-
-.header {
+@media screen and (max-width: 768px) {
+body {
+  background: rgb(69,69,69);
+  background: linear-gradient(180deg, rgb(97, 97, 97) 0%, rgb(34, 34, 34) 100%);
+  height: 100%;
+  margin: 0;
+  margin-bottom: 20px;
+  margin-top: 250px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+}
+#navbar {
   overflow: hidden;
   background-color: #2e2e2e;
-  padding: 20px 10px;
-
+  padding: 20px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 
-.header a {
+#navbar a {
   float: left;
   color: rgb(255, 255, 255);
   text-align: center;
@@ -33,42 +49,42 @@ background: linear-gradient(180deg, rgb(97, 97, 97) 0%, rgb(34, 34, 34) 100%);
 }
 
 
-.header a.logo {
+#navbar a.logo {
   font-size: 25px;
   font-weight: bold;
   color: white;
 }
 
 
-.header a:hover {
+#navbar a:hover {
   background-color: #ddd;
   color: black;
 }
 
 
-.header a.active {
+#navbar a.active {
   background-color: rgb(0, 146, 114);
   color: white;
 }
 
 
-.header-right {
+#navbar-right {
   float: right;
 }
 
 
 @media screen and (max-width: 768px) {
-  .header a {
+  #navbar a {
     float: none;
     display: block;
     text-align: center;
   }
-  .header-right {
+  #navbar-right {
     float: none;
   }
 }
 
-#welcome {
+#welcome-section {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -105,7 +121,7 @@ p {
   animation: fadeIn 1s;
 }
 
-#thumbnails {
+#projects {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,7 +130,7 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-  #thumbnails {
+  #projects {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -166,27 +182,27 @@ img:hover {
   100% {opacity:1;}
 }
 
-.img-wrap {
+.project-tile {
   position: relative;
   width: 500px;
   margin: 20px;
   height: auto;
 }
-.img-wrap-two {
-  position: relative;
-  width: 500px;
-  margin: 20px;
-  height: auto;
-}
-
-.img-wrap-three {
+.project-tile-two {
   position: relative;
   width: 500px;
   margin: 20px;
   height: auto;
 }
 
-.img-wrap-four {
+.project-tile-three {
+  position: relative;
+  width: 500px;
+  margin: 20px;
+  height: auto;
+}
+
+.project-tile-four {
   position: relative;
   width: 500px;
   margin: 20px;
@@ -258,7 +274,7 @@ hr {
   color: rgb(0, 146, 114);
 }
 
-#link-block {
+#profile-link {
   display: flex;
   justify-content: center;
   flex-direction: column;
