--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'Catamaran', sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -63,10 +64,7 @@ body {
 }
 
 
-#navbar a.active {
-  background-color: rgb(0, 146, 114);
-  color: white;
-}
+
 
 
 #navbar-right {
@@ -93,6 +91,15 @@ body {
 }
 
 h1 {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+  color: white;
+  animation: fadeIn 1s;
+  
+}
+
+h2 {
   display: flex;
   justify-content: center;
   margin: 30px;
